--- a/kmall-manager-web/pom.xml
+++ b/kmall-manager-web/pom.xml
@@ -8,9 +8,9 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>com.kgc.kmall</groupId>
-	<artifactId>kmall-manager-service</artifactId>
+	<artifactId>kmall-manager-web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>kmall-manager-service</name>
+	<name>kmall-manager-web</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -20,17 +20,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.kgc.kmall</groupId>
-			<artifactId>kmall-api</artifactId>
+			<artifactId>kmall-web-util</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.kgc.kmall</groupId>
-			<artifactId>kmall-user-web</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.kgc.kmall</groupId>
-			<artifactId>kmall-service-util</artifactId>
+			<artifactId>kmall-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
